new details added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     Thank you.</h4>
 </section>
 
-<section>
+<section class="myresume">
     <h2>Resume</h2>
     <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, distinctio officia! Non molestiae delectus ut quae dignissimos neque natus, temporibus quidem dolores. Dolores at voluptates, enim perspiciatis iusto dolore voluptatem.</h4>
 </section>
